# aa-moonmaster

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
moonmaster/: __init__.py  admin.py  apps.py  calculator.py  constants.py  hooks.py  models.py  pricing.py  providers.py  sde.py  tasks.py  urls.py  views.py
moonmaster/management/commands/: moonmaster_debug_assets.py  moonmaster_relink.py
moonmaster/migrations/: 0001_initial.py  0002_alter_moon_ore_composition_alter_moon_rarity_class_and_more.py  0003_structure_fuel_blocks_per_hour.py  0004_structure_reinforce_fields.py  0005_ownercharacter.py  0006_fix_ore_type_ids.py  0007_alter_oreprice_source_alter_ownercharacter_id.py  0008_structure_goo_bay_contents.py  0009_drillownership_drilltaxrecord.py  0010_drilltax_permissions_paymentconfig.py
moonmaster/static/moonmaster/css/: moonmaster.css
moonmaster/static/moonmaster/js/: moonmaster.js
moonmaster/templates/moonmaster/: base.html  create_drill_tax_record.html  dashboard.html  drill_records.html  drill_tax_overview.html  extractions.html  import_survey.html  manage_owners.html  metenox_list.html  moon_detail.html  moon_list.html  my_drill_records.html  reports.html  structure_list.html
moonmaster/templatetags/: moonmaster_tags.py
